feature: AI wip
